# readmission-lakehouse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml
.cursor/rules/: 00-project.mdc  10-python.mdc  20-data-engineering.mdc  30-cursor-behaviour.mdc  40-learning-mode.mdc
.github/workflows/: ci.yml  terraform.yml
airflow/: .gitignore  Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: readmission_pipeline.py
airflow/dbt-profiles/: .user.yml  profiles.yml
airflow/tests/: test_dag_integrity.py
data/synthea/: synthea.properties
dbt/: dbt_project.yml
dbt/macros/: extract_fhir_id.sql  generate_schema_name.sql  parse_fhir_timestamp.sql
dbt/models/gold/: _gold_models.yml  dim_condition.sql  dim_date.sql  dim_organization.sql  dim_patient.sql  dim_provider.sql  fact_encounter.sql  fact_readmission.sql
dbt/models/silver/: _silver_models.yml  _sources.yml  condition.sql  encounter.sql  medication_request.sql  observation.sql  organization.sql  patient.sql  practitioner.sql  procedure.sql
dbt/snapshots/: organization_snapshot.sql  patient_snapshot.sql  practitioner_snapshot.sql
docs/: data-dictionary.md  decisions.md  project-state.md  star_schema_dbml
resources/: bronze_ingestion.yml  silver_validation.yml
scripts/: setup-azure.sh  setup-phase3-azure.sh  setup-phase3-backend.sh  setup-phase3-tools.sh  setup-tf-backend.sh  setup-tools.sh  smoke_rag.py  upload-synthea-to-adls.sh
src/readmission_lakehouse/: __init__.py
src/readmission_lakehouse/agent/: .env.example  app.py  config.py  corpus.py  db.py  graph.py  guidelines.py  profile.py
src/readmission_lakehouse/bronze/: cli.py  ingest.py  resources.py
src/readmission_lakehouse/contracts/: __init__.py  fhir.py
src/readmission_lakehouse/silver/: cli.py  resources.py  validate.py
src/readmission_lakehouse/tools/: __init__.py  profile_synthea.py  sample_synthea.py
terraform/environments/dev/: .terraform.lock.hcl  container_app.tf  databricks.tf  identity.tf  keyvault.tf  locals.tf  main.tf  outputs.tf  rg.tf  storage.tf  terraform.example.tfvars  uc.tf  variables.tf
terraform/modules/databricks/: main.tf  outputs.tf  variables.tf
terraform/modules/identity/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/modules/keyvault/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/unit/: test_fhir_contracts.py  test_profile_synthea.py  test_sample_synthea.py  test_smoke.py
tests/unit/agent/: test_config.py  test_profile.py
tests/unit/bronze/: test_ingest.py
tests/unit/silver/: test_validate.py
