[project]
name = "readmission-lakehouse"
version = "0.1.0"
description = "Hospital readmission risk lakehouse — medallion architecture on Azure (portfolio)."
readme = "README.md"
authors = [{ name = "Ibrahim Al-Hindi", email = "ibralhindi@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "click>=8.0.0",
]

[project.scripts]
profile-synthea = "readmission_lakehouse.tools.profile_synthea:cli"
sample-synthea = "readmission_lakehouse.tools.sample_synthea:cli"
rl-bronze-ingest = "readmission_lakehouse.bronze.cli:main"
rl-silver-validate = "readmission_lakehouse.silver.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.0.0",
    "pyspark>=3.5.0,<4",
    "delta-spark>=3.2.0,<4",
    "dbt-databricks>=1.9.0",
]
rag = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "tiktoken>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
packages = ["readmission_lakehouse"]

# Bug-catching essentials (keep these)
disallow_untyped_defs = true       # every function has type hints
disallow_incomplete_defs = true    # no partially-typed signatures
check_untyped_defs = true          # type-check inside untyped functions too
warn_return_any = true             # flag implicit Any returns
warn_unused_ignores = true         # remove stale # type: ignore
no_implicit_optional = true        # `x: int = None` is rejected, must be `int | None`
warn_redundant_casts = true        # flag dead cast()

# Pedantic — disabled (these were in strict, fight 3rd-party libs)
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_generics = false
no_implicit_reexport = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=readmission_lakehouse",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=60",
]

[tool.coverage.run]
branch = true
source = ["readmission_lakehouse"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
